--- a/atlas.html
+++ b/atlas.html
@@ -99,26 +99,26 @@
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item col-centered">
                 <div class="col-sm-6 portfolio-item"> 
-                <a  href="groundwater_index.html" target="_blank">
+                <a  href="groundwater.html" target="_blank">
                     <img class="img-responsive" src="img/ground_home.png" alt="">
                 </a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                 <h4>
-                    <a  href="groundwater_index.html" target="_blank">Groundwater</a>
+                    <a  href="groundwater.html" target="_blank">Groundwater</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">aquifers, recharge, irrigation, use, conservation</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item col-centered">
                 <div class="col-sm-6 portfolio-item"> 
-                	<a  href="surface_index.html" target="_blank">
+                	<a  href="surface.html" target="_blank">
                     	<img class="img-responsive" src="img/surface_home.png" alt="">
                 	</a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                 	<h4>
-                    	<a  href="surface_index.html" target="_blank">Surface Water</a>
+                    	<a  href="surface.html" target="_blank">Surface Water</a>
                		</h4>
                		<p style="padding-right:20px; margin-top:-5px; font-size:16px;">rivers, lakes, watersheds, wetlands, pollution</p>
                 </div>
@@ -130,39 +130,39 @@
         <div class="row no-gutter" style="margin-bottom: 50px;">
             <div class="col-xs-12 col-sm-4 portfolio-item ">
                 <div class="col-sm-6 portfolio-item"> 
-                <a href="flood_index.html" target="_blank">
+                <a href="flood.html" target="_blank">
                     <img class="img-responsive" src="img/flood_home.png" alt="">
                 </a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                 <h4>
-                    <a  href="flood_index.html" target="_blank">Flooding</a>
+                    <a  href="flood.html" target="_blank">Flooding</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">1861, Vanport, 1964, 1996, flood risk</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item nopadding">
                 <div class="col-sm-6 portfolio-item"> 
-                <a  href="infrastructure_index.html" target="_blank">
+                <a  href="infrastructure.html" target="_blank">
                     <img class="img-responsive" src="img/infra_home.png" alt="">
                 </a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                  <h4>
-                    <a  href="infrastructure_index.html" target="_blank">Infrastructure</a>
+                    <a  href="infrastructure.html" target="_blank">Infrastructure</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">dams, hazards, hydroelectricity, dam removal, bridges</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
                 <div class="col-sm-6 portfolio-item"> 
-                <a href="water_use_index.html" target="_blank">
+                <a href="water_use.html" target="_blank">
                     <img class="img-responsive" src="img/use_home.png" alt="">
                 </a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                  <h4>
-                   <a  href="water_use_index.html" target="_blank"> Water Use</a>
+                   <a  href="water_use.html" target="_blank"> Water Use</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">total use, water rights, use categories</p>
                 </div>
@@ -173,13 +173,13 @@
         <div class="row no-gutter">
             <div class="col-xs-12 col-sm-4 portfolio-item">
                 <div class="col-sm-6 portfolio-item"> 
-                <a  href="drinking_index.html" target="_blank">
+                <a  href="drinking.html" target="_blank">
                     <img class="img-responsive" src="img/drinking_home.png" alt="">
                 </a>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                    <h4>
-                    <a  href="drinking_index.html" target="_blank">Drinking Water</a>
+                    <a  href="drinking.html" target="_blank">Drinking Water</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">surface, ground, bottled, contaminants</p>
                 </div>
@@ -190,24 +190,24 @@
     					<img class="img-responsive" src="img/conflict_home.png" alt="">
   				</button>
   				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    					<a class="dropdown-item" target="_blank" href="http://oregonwater.info/umatilla_index.html">Umatilla</a><br/>
+    					<a class="dropdown-item" target="_blank" href="http://oregonwater.info/umatilla.html">Umatilla</a><br/>
   					</div>
                 </div>
                 <div class="col-sm-6 portfolio-item"> 
                 <h4>
-                    <a  href="water_use_index.html" target="_blank">Conflict</a>
+                    <a  href="water_use.html" target="_blank">Conflict</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">water rights, shortages, Umatilla, Klamath</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 portfolio-item">
                 <div class="col-sm-6 portfolio-item"> 
-                <a  href="fish_index.html" target="_blank">
+                <a  href="fish.html" target="_blank">
                     <img class="img-responsive" src="img/fish_home.png" alt="">
                 </a>
                 </div>
                 <h4>
-                    <a  href="fish_index.html" target="_blank">Fish</a>
+                    <a  href="fish.html" target="_blank">Fish</a>
                 </h4>
                 <p style="padding-right:20px; margin-top:-5px; font-size:16px;">barriers, trout, salmon, lamprey, sturgeon, hatcheries</p>
                 </div>
