--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <div class="col-xs-12 col-sm-12 col-md-2 col-lg-4"></div>
                             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-4" id="text-container">
                                 <div class="project-paragraph">
-                                    <a href="https://aol.wdt.pdx.edu/map" target="_blank" style="color:black; text-decoration: none;">
+                                    <a href="https://oregonlakesatlas.org/map" target="_blank" style="color:black; text-decoration: none;">
                                     <img class="icon-img" src="img/oregon-lakes.png" style="width:100%;" >
                                     <!--<h2 class="project-title">Atlas of Oregon Lakes</h2>-->
                                     <p>The Atlas of Oregon Lakes is a resource for the public, resource management agencies, and scientists to enhance management and enjoyment of our lakes. The online atlas is an updated version of the popular Atlas of Oregon Lakes published in 1985.</p>
